--- a/BookMyShowDemo/Stories/Movie/Movie.storyboard
+++ b/BookMyShowDemo/Stories/Movie/Movie.storyboard
@@ -15,10 +15,25 @@
                     <view key="view" contentMode="scaleToFill" id="4lf-Ko-egZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="k4a-Sm-oct">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="0CY-jb-JFt"/>
-                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="k4a-Sm-oct" firstAttribute="top" secondItem="0CY-jb-JFt" secondAttribute="top" id="0Ih-Lb-R66"/>
+                            <constraint firstItem="0CY-jb-JFt" firstAttribute="trailing" secondItem="k4a-Sm-oct" secondAttribute="trailing" id="HTX-Rs-9UO"/>
+                            <constraint firstItem="0CY-jb-JFt" firstAttribute="bottom" secondItem="k4a-Sm-oct" secondAttribute="bottom" id="TAw-b3-bTO"/>
+                            <constraint firstItem="k4a-Sm-oct" firstAttribute="leading" secondItem="0CY-jb-JFt" secondAttribute="leading" id="iQc-TE-S90"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="NTw-dB-zxy"/>
+                    <connections>
+                        <outlet property="movieListTableView" destination="k4a-Sm-oct" id="hkS-eY-nvf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fIy-YU-Hva" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -44,8 +59,8 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
