--- a/BookMyShowDemo/Stories/Movie/Movie.storyboard
+++ b/BookMyShowDemo/Stories/Movie/Movie.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Movie List View Controller-->
+        <!--Movies-->
         <scene sceneID="cDC-0N-GR5">
             <objects>
                 <viewController storyboardIdentifier="MovieListViewController" id="Jn1-ON-jgF" customClass="MovieListViewController" customModule="BookMyShowDemo" customModuleProvider="target" sceneMemberID="viewController">
@@ -30,14 +30,61 @@
                             <constraint firstItem="k4a-Sm-oct" firstAttribute="leading" secondItem="0CY-jb-JFt" secondAttribute="leading" id="iQc-TE-S90"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="NTw-dB-zxy"/>
+                    <navigationItem key="navigationItem" title="Movies" id="NTw-dB-zxy">
+                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="lzo-9H-YEo">
+                            <color key="tintColor" systemColor="systemRedColor"/>
+                            <connections>
+                                <segue destination="21V-Hr-lSF" kind="show" identifier="segueSearchView" id="42I-6d-chq"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="movieListTableView" destination="k4a-Sm-oct" id="hkS-eY-nvf"/>
+                        <outlet property="searchButton" destination="lzo-9H-YEo" id="j83-3D-UtW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fIy-YU-Hva" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="586.95652173913049" y="-19.419642857142858"/>
+        </scene>
+        <!--Search Movies-->
+        <scene sceneID="eZX-TG-cma">
+            <objects>
+                <viewController id="21V-Hr-lSF" customClass="SearchViewController" customModule="BookMyShowDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="u20-EN-eLV">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6SE-go-iMv">
+                                <rect key="frame" x="0.0" y="144" width="414" height="718"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="hug-NI-dxi">
+                                <rect key="frame" x="0.0" y="88" width="414" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="NcN-CB-5Gu"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6SE-go-iMv" firstAttribute="top" secondItem="hug-NI-dxi" secondAttribute="bottom" id="1td-SD-s70"/>
+                            <constraint firstItem="6SE-go-iMv" firstAttribute="leading" secondItem="NcN-CB-5Gu" secondAttribute="leading" id="8f8-ex-EX5"/>
+                            <constraint firstItem="hug-NI-dxi" firstAttribute="top" secondItem="NcN-CB-5Gu" secondAttribute="top" id="MiV-P7-SWn"/>
+                            <constraint firstItem="NcN-CB-5Gu" firstAttribute="bottom" secondItem="6SE-go-iMv" secondAttribute="bottom" id="U91-4x-8My"/>
+                            <constraint firstItem="hug-NI-dxi" firstAttribute="trailing" secondItem="NcN-CB-5Gu" secondAttribute="trailing" id="gIN-gi-K3i"/>
+                            <constraint firstItem="hug-NI-dxi" firstAttribute="leading" secondItem="NcN-CB-5Gu" secondAttribute="leading" id="hSh-PY-faj"/>
+                            <constraint firstItem="NcN-CB-5Gu" firstAttribute="trailing" secondItem="6SE-go-iMv" secondAttribute="trailing" id="q8d-XW-gbB"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Search Movies" id="xE4-x3-AEH"/>
+                    <connections>
+                        <outlet property="moviesTableView" destination="6SE-go-iMv" id="Flg-ea-4Pp"/>
+                        <outlet property="searchBar" destination="hug-NI-dxi" id="jmc-JO-X12"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zFX-2P-c3h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1332" y="-19"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="q4a-8o-fIH">
@@ -61,6 +108,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
