--- a/BookMyShowDemo/Stories/Movie/Movie.storyboard
+++ b/BookMyShowDemo/Stories/Movie/Movie.storyboard
@@ -19,6 +19,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="k4a-Sm-oct">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="0CY-jb-JFt"/>
@@ -66,6 +67,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="NcN-CB-5Gu"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="6SE-go-iMv" firstAttribute="top" secondItem="hug-NI-dxi" secondAttribute="bottom" id="1td-SD-s70"/>
                             <constraint firstItem="6SE-go-iMv" firstAttribute="leading" secondItem="NcN-CB-5Gu" secondAttribute="leading" id="8f8-ex-EX5"/>
@@ -86,6 +88,21 @@
             </objects>
             <point key="canvasLocation" x="1332" y="-19"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="9ed-1a-zdE">
+            <objects>
+                <viewController id="n6X-jZ-e9b" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wd3-jV-cZn">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="svO-mQ-lsl"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tmn-ue-sZC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2116" y="-19"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="q4a-8o-fIH">
             <objects>
@@ -94,6 +111,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="1EC-AA-mmY">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
