--- a/BookMyShowDemo/Stories/Movie/Movie.storyboard
+++ b/BookMyShowDemo/Stories/Movie/Movie.storyboard
@@ -88,10 +88,10 @@
             </objects>
             <point key="canvasLocation" x="1332" y="-19"/>
         </scene>
-        <!--View Controller-->
+        <!--Movie Details View Controller-->
         <scene sceneID="9ed-1a-zdE">
             <objects>
-                <viewController id="n6X-jZ-e9b" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MovieDetailsViewController" id="n6X-jZ-e9b" customClass="MovieDetailsViewController" customModule="BookMyShowDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wd3-jV-cZn">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
