--- a/BookMyShowDemo/Stories/Movie/MovieDetails/MovieCollectionViewCell/MovieCollectionViewCell.xib
+++ b/BookMyShowDemo/Stories/Movie/MovieDetails/MovieCollectionViewCell/MovieCollectionViewCell.xib
@@ -11,36 +11,41 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="MovieCollectionViewCell" customModule="BookMyShowDemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="169" height="191"/>
+            <rect key="frame" x="0.0" y="0.0" width="152" height="233"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="169" height="191"/>
+                <rect key="frame" x="0.0" y="0.0" width="152" height="233"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dsy-lI-NtM">
-                        <rect key="frame" x="0.0" y="0.0" width="169" height="191"/>
+                        <rect key="frame" x="0.0" y="0.0" width="152" height="233"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Kfa-Xc-ScP">
-                                <rect key="frame" x="0.0" y="0.0" width="169" height="191"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LqD-o6-Nfr">
-                                        <rect key="frame" x="0.0" y="0.0" width="169" height="128"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0cv-TG-hFn">
-                                        <rect key="frame" x="64" y="148" width="41.5" height="43"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LqD-o6-Nfr">
+                                <rect key="frame" x="0.0" y="0.0" width="152" height="171"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="LqD-o6-Nfr" secondAttribute="height" multiplier="8:9" id="fvU-Ud-Uj6"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0cv-TG-hFn">
+                                <rect key="frame" x="0.0" y="171" width="152" height="62"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Kfa-Xc-ScP" firstAttribute="leading" secondItem="Dsy-lI-NtM" secondAttribute="leading" id="9TE-ym-dOF"/>
-                            <constraint firstAttribute="bottom" secondItem="Kfa-Xc-ScP" secondAttribute="bottom" id="E8t-c7-zxe"/>
-                            <constraint firstAttribute="trailing" secondItem="Kfa-Xc-ScP" secondAttribute="trailing" id="P6Z-pS-wdq"/>
-                            <constraint firstItem="Kfa-Xc-ScP" firstAttribute="top" secondItem="Dsy-lI-NtM" secondAttribute="top" id="Q7d-OW-J9R"/>
+                            <constraint firstItem="LqD-o6-Nfr" firstAttribute="leading" secondItem="Dsy-lI-NtM" secondAttribute="leading" id="3aX-Zk-u5e"/>
+                            <constraint firstAttribute="trailing" secondItem="0cv-TG-hFn" secondAttribute="trailing" id="57d-Au-Xbt"/>
+                            <constraint firstAttribute="trailing" secondItem="LqD-o6-Nfr" secondAttribute="trailing" id="7d5-ef-mdk"/>
+                            <constraint firstItem="0cv-TG-hFn" firstAttribute="leading" secondItem="Dsy-lI-NtM" secondAttribute="leading" id="HPk-DH-MB5"/>
+                            <constraint firstAttribute="bottom" secondItem="0cv-TG-hFn" secondAttribute="bottom" id="KYg-mj-3ME"/>
+                            <constraint firstAttribute="bottom" secondItem="0cv-TG-hFn" secondAttribute="bottom" id="XCN-qH-M0x"/>
+                            <constraint firstItem="LqD-o6-Nfr" firstAttribute="top" secondItem="Dsy-lI-NtM" secondAttribute="top" id="ai1-tT-YSA"/>
+                            <constraint firstItem="0cv-TG-hFn" firstAttribute="leading" secondItem="Dsy-lI-NtM" secondAttribute="leading" id="f0x-p5-W9w"/>
+                            <constraint firstItem="0cv-TG-hFn" firstAttribute="top" secondItem="LqD-o6-Nfr" secondAttribute="bottom" id="gNp-Pv-ZQa"/>
+                            <constraint firstAttribute="trailing" secondItem="0cv-TG-hFn" secondAttribute="trailing" id="hQb-mp-UMc"/>
+                            <constraint firstItem="LqD-o6-Nfr" firstAttribute="height" secondItem="Dsy-lI-NtM" secondAttribute="height" multiplier="0.733906" id="mje-g5-bbe"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -52,12 +57,12 @@
                 <constraint firstItem="Dsy-lI-NtM" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="ZPe-wX-uho"/>
                 <constraint firstAttribute="trailing" secondItem="Dsy-lI-NtM" secondAttribute="trailing" id="kP6-3G-NtD"/>
             </constraints>
-            <size key="customSize" width="169" height="191"/>
+            <size key="customSize" width="152" height="233"/>
             <connections>
                 <outlet property="movieImageView" destination="LqD-o6-Nfr" id="59I-RW-Ved"/>
                 <outlet property="movieTitleLabel" destination="0cv-TG-hFn" id="A4G-c4-q7E"/>
             </connections>
-            <point key="canvasLocation" x="196" y="135"/>
+            <point key="canvasLocation" x="182.60869565217394" y="148.32589285714286"/>
         </collectionViewCell>
     </objects>
     <resources>
